add hidden items + small code cleanup